<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:fontFamily="@font/primary_bold"
            android:gravity="center_vertical"
            android:text="@string/main_title_appBar"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:paddingTop="2dp"
            android:paddingBottom="2dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:paddingStart="52dp"
            android:paddingEnd="52dp"
            android:src="@mipmap/img_tutorial" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:hint="@string/main_fullName"
            app:startIconDrawable="@drawable/ic_user_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_main_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:hint="@string/main_email"
            app:startIconDrawable="@drawable/ic_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_main_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingTop="2dp"
            android:paddingEnd="12dp"
            android:paddingBottom="2dp"
            android:text="@string/main_gender" />

        <RadioGroup
            android:id="@+id/rg_main_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_main_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rb_main_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_female" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_main_saveInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="24dp"
            android:text="@string/main_btn_save"
            app:icon="@drawable/ic_save_24dp" />
    </LinearLayout>

</ScrollView>